bugfix: title display on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -32,22 +32,19 @@ menu {
   display: grid;
   justify-items: end;
   align-items: center;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   height: fit-content;
 }
 
 menu a {
   text-decoration: none;
   color: var(--text-color);
+  grid-column: 1/3;
 }
 
 @media screen and (min-width: 700px) {
-  menu {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-
   menu a {
-    grid-column-start: 2;
+    grid-column: 2/2;
   }
 }
 
